--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "swiper": "^8.4.7",
     "web-vitals": "^2.1.4"
   },
